<resources>
    <string name="app_name">HabitTracker</string>
    <string name="edit_name_hint">Name</string>
    <string name="edit_description_hint">Desctiption</string>
    <string name="habit_type_hint">Habit type</string>
    <string name="habit_type_good">Good habit</string>
    <string name="habit_type_bad">Bad habit</string>
    <string name="priority_hint">Priority</string>
    <string name="period_hint">Period</string>
    <string name="create_button">Create</string>
    <string name="habit_color_hint">Habit color</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>