<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.example.habittracker.models.Type"/>
        <import type="com.example.habittracker.models.Color"/>

        <variable
            name="viewModel"
            type="com.example.habittracker.viewmodel.HabitViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HabitFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/edit_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@={viewModel.habit.name}"
                android:inputType="none"
                android:maxLines="1"
                tools:text="Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="4dp"
            android:hint="@string/edit_description_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:text="@={viewModel.habit.description}"
                tools:text="Description" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:checkedButton="@+id/radio_button_1"
            app:layout_constraintTop_toBottomOf="@id/edit_description_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/habit_type_hint" />

            <RadioButton
                android:id="@+id/radio_good"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="@={viewModel.good}"
                android:text="@string/habit_type_good" />

            <RadioButton
                android:id="@+id/radio_bad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="@={viewModel.bad}"
                android:text="@string/habit_type_bad" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priority_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint=""
            app:layout_constraintTop_toBottomOf="@id/radio_group">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/priority_hint"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/period"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/period_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_menu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.habit.period}"
                android:gravity="top"
                android:lineSpacingExtra="1dp"
                tools:text="Количество раз в неделю" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/habit_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="16dp"
            android:padding="20dp"
            android:text="@string/create_button"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:id="@+id/color_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:checkedButton="@+id/radio_button_1"
            app:layout_constraintTop_toBottomOf="@id/period">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/habit_color_hint" />

            <RadioButton
                android:id="@+id/radio_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="@={viewModel.red}"
                android:text="@string/color_red" />

            <RadioButton
                android:id="@+id/radio_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="@={viewModel.blue}"
                android:text="@string/color_blue" />

            <RadioButton
                android:id="@+id/radio_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="@={viewModel.green}"
                android:text="@string/color_green" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>